# skillforge

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml  requirements.txt
data/: roles.json
data/seed_corpus/: 01-networking-fundamentals.md  02-ip-addressing-subnetting.md  03-switching-and-vlans.md  04-routing-and-ospf.md  05-nat-acls-firewalls.md  06-vulnerability-management.md  07-threat-detection-ids-mitre.md  08-incident-response-and-defense.md  09-role-competency-profiles.md  10-network-design-architecture.md  11-network-automation.md  12-cloud-networking.md  13-network-monitoring-noc.md  14-wireless-networking.md
docs/: architecture.mmd
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/scripts/: make_favicon.py
frontend/src/: App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AgentTimeline.tsx  Assessment.tsx  Logo.tsx  ReadinessGauge.tsx  Result.tsx  RolePicker.tsx  levels.ts  ui.tsx
skillforge/: __init__.py  config.py  domain.py  foundry_client.py  guardrails.py  orchestrator.py  sanitize.py  schemas.py
skillforge/agents/: __init__.py  assessor.py  gap_analyzer.py  learning_planner.py  readiness_tracker.py  role_profiler.py
skillforge/knowledge/: __init__.py  foundry_iq_backend.py  interface.py  local_backend.py
tests/: conftest.py  test_api.py  test_foundry_live.py  test_guardrails.py  test_local_backend.py  test_orchestrator.py  test_readiness.py  test_roles.py  test_schemas.py  test_scoring.py
web/: app.py
